--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="jumbotron text-center">
-    <h3>Abdullahın bloğuna hoşgeldiniz.</h3>
+    <h3>Welcome.</h3>
     <p>apomshnpsasasdasdasdasdasdas</p>
 </div>
 {% endblock  %}
