--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -15,6 +15,9 @@
           <ul class="navbar-nav ml-auto">
             {% if session["logged_in"] %}
             <li class="nav-item active">
+              <a class="nav-link" href="/dashboard">Dashboard</a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="/logout">Logout</a>
               </li>
             {% else %}
