Create decorator for dashboard page

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h3>Giriş yap.</h3>
+<h3>Login</h3>
 <hr>
 
 {% from "includes/formhelpers.html" import render_field %}
@@ -11,5 +11,5 @@
     <button type="submit" class="btn btn-primary">Giriş Yap</button>
 </form>
 
-{% endblock body %}<h3>Giriş yap.</h3>
+{% endblock body %}<h3>Login</h3>
 
