--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 {% from "includes/formhelpers.html" import render_field %}
-<h3>Kayıt olun.</h3>
+<h3>Register</h3>
 <hr>
 
 
@@ -14,4 +14,4 @@
         {{ render_field(form.confirm,class= "form-control") }}
         <button type="submit" class="btn btn-primary">Kayıt Ol</button>
 </form>
-{% endblock body %}<h3>Kayıt olun.</h3>
+{% endblock body %}<h3>Register</h3>
