--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -27,7 +27,7 @@
           <td><a href="/article/{{article.id}}">{{article.title}}</a></td>
           <td>{{article.author}}</td>
           <td>{{article.created_date}}</td>
-          <td><a href="/edit/{{article.id}}" class="btn btn-danger">Update</a></td>
+          <td><a href="/edit/{{article.id}}" class="btn btn-danger">Edit</a></td>
           <td><a href="/delete/{{article.id}}" class="btn btn-danger">Delete</a></td>
         </tr>
       
