--- a/templates/articles.html
+++ b/templates/articles.html
@@ -6,6 +6,11 @@
 <hr>
 
 {% if articles %}
+<form action="/search" method="POST">
+  <input type="text" name="keyword" class="input-sm" maxlength="64" placeholder="Search">
+  <button type="submit" class="btn btn-danger">Search</button>
+</form>
+<hr>
 <ul class="list-group">
     {% for article in articles %}
 
