--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -18,6 +18,9 @@
               <a class="nav-link" href="/dashboard">Dashboard</a>
             </li>
             <li class="nav-item active">
+              <a class="nav-link" href="/account">Account</a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="/logout">Logout</a>
               </li>
             {% else %}
