--- a/blog/templates/account.html
+++ b/blog/templates/account.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
+    <h1>{{current_user.username}}</h1>
     <div class="content-section">
         <div class="media">
             <img src="{{ image_file }}" class="rounded-circle account-img">
