--- a/blog/templates/includes/navbar.html
+++ b/blog/templates/includes/navbar.html
@@ -13,7 +13,7 @@
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
-            {% if session["logged_in"] %}
+            {% if current_user.is_authenticated %}
             <li class="nav-item active">
               <a class="nav-link" href="/dashboard">Dashboard</a>
             </li>
