--- a/blog/templates/account.html
+++ b/blog/templates/account.html
@@ -9,7 +9,7 @@
                 </div>
         </div>
         <br>
-                <form method="POST" action="">
+                <form method="POST" action="" enctype="multipart/form-data">
                         {{ form.hidden_tag() }}
                 <fieldset class="form-group">
                         <legend class="border-bottom mb-5">Account Info</legend>
@@ -32,13 +32,21 @@
                                         {{ form.email(class = "form-control form-control-lg is-invalid")}}
                                         <div class="invalid-feedback">
                                                 {% for error in form.email.errors %}
-                                                <span>{{ error }}</span>
+                                                        <span>{{ error }}</span>
                                                 {% endfor %}
                                         </div>
                                         {% else %}
                                                 {{ form.email(class = "form-control form-control-lg") }}
                                         {% endif %}
                          </div>
+                         <div class="form-group">
+                                {{form.picture.label()}}
+                                {{form.picture(class = "form-control-file")}}
+                                {% if form.picture.errors %}
+                                        {% for error in form.picture.errors %}
+                                                <span class="text-danger">{{error}}</span></div>
+                                        {% endfor %}
+                                {% endif %}
                 </fieldset>
                 <div class="form-group">
                         {{form.submit(class="btn btn-outline-info")}}
