--- a/blog/templates/dashboard.html
+++ b/blog/templates/dashboard.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <h3>Dashboard</h3>
-<small>Welcome, {{session["username"]}}</small>
+<small>Welcome, {{current_user.username}}</small>
 <hr>
 <a href="/addarticle" class="btn btn-danger">Add Article</a>
 
@@ -25,8 +25,8 @@
         <tr>
           <th scope="row">{{article.id}}</th>
           <td><a href="/article/{{article.id}}">{{article.title}}</a></td>
-          <td>{{article.author}}</td>
-          <td>{{article.created_date}}</td>
+          <td>{{article.author.username}}</td>
+          <td>{{article.date_posted.strftime("%Y-%m-%d")}}</td>
           <td><a href="/edit/{{article.id}}" class="btn btn-danger">Edit</a></td>
           <td><a href="/delete/{{article.id}}" class="btn btn-danger">Delete</a></td>
         </tr>
