Delete article page configuration.

--- a/blog/templates/addarticle.html
+++ b/blog/templates/addarticle.html
@@ -1,13 +1,12 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<h3>Create Article</h3>
 <hr>
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">{{ legend }}</legend>
+            <legend class="border-bottom mb-4"><h3>{{ legend }}</h3></legend>
             <div class="form-group">
                 {{ form.title.label(class="form-control-label") }}
                 {% if form.title.errors %}
