--- a/blog/templates/articles.html
+++ b/blog/templates/articles.html
@@ -12,10 +12,26 @@
 </form>
 <hr>
 <ul class="list-group">
-    {% for article in articles %}
-    <li class="list-group-item"><a href="article/{{article.id}}">{{article.title}}</a></li>
-    
-    {% endfor %}
+  <table class="table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">id</th>
+          <th scope="col">Title</th>
+          <th scope="col">Author</th>
+          <th scope="col">Date</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for article in articles  %}
+          <tr>
+            <th scope="row">{{article.id}}</th>
+            <td><a href="/article/{{article.id}}">{{article.title}}</a></td>
+            <td>{{article.author.username}}</td>
+            <td>{{article.date_posted.strftime("%Y-%m-%d")}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </ul>
 {% else %}
 <div class="alert alert-danger">There are no articles here yet.</div>
