--- a/blog/templates/user_articles.html
+++ b/blog/templates/user_articles.html
@@ -1,10 +1,8 @@
 {% extends "layout.html" %}
 
 {% block body %}
-
-<h3>Articles </h3>
+<h1 class="mb-3">Articles by {{ user.username }}</h1>
 <hr>
-
 {% if articles %}
 <form action="/search" method="POST">
   <input type="text" name="keyword" class="input-sm" maxlength="64" placeholder="Search">
@@ -26,7 +24,7 @@
           <tr>
             <th scope="row">{{article.id}}</th>
             <td><a href="/article/{{article.id}}">{{article.title}}</a></td>
-            <td><a href="{{url_for("user_articles",username = article.author.username)}}">{{article.author.username}}</a></td>
+            <td>{{article.author.username}}</td>
             <td>{{article.date_posted.strftime("%Y-%m-%d")}}</td>
           </tr>
         {% endfor %}
